# absentia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFERRALS.md  LICENSE  NOTICE  README.md  absentia.toml.example  lacuna.toml  lacuna.toml.example  mkdocs.yml  pyproject.toml
.absentia/: last_run.json  state.db
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  publish.yml  release-checks.yml  wheels.yml
docs/: index.md
docs/explanation/: architecture.md  estimator.md  how-mining-works.md  what-is-negative-space.md  why-no-llm.md
docs/preview/: README.html
docs/preview/docs/explanation/: architecture.html
docs/reference/: absentia-toml.md  cli.md  lacuna-toml.md  selectors.md  tui-keys.md
docs/tutorial/: quickstart.md
scripts/: check_fingerprint_bump.sh  diagnose_scan.py  diff_scan.py  local_ci.sh  profile_scan.py  release.sh  scan_remote.py  update_ts.py
src/absentia/: __init__.py  __main__.py  _color.py  _suppressions.py  calibration.py  cli.py  closure.py  config.py  enrichment.py  entities.py  estimator.py  export.py  mining.py  output.py  parallel.py  parsing.py  progress.py  runs_log.py  selectors.py  series.py  settings.py  storage.py  symmetry.py
src/absentia/extractors/: __init__.py  base.py  bash.py  c.py  cpp.py  go.py  java.py  javascript.py  lua.py  php.py  python.py  ruby.py  scala.py  swift.py
src/absentia/tui/: __init__.py  app.py
src/lacuna/: __init__.py  __main__.py  _color.py  _console.py  calibration.py  cli.py  config.py  enrichment.py  entities.py  estimator.py  features.py  mining.py  output.py  parallel.py  parsing.py  progress.py  runs_log.py  selectors.py  series.py  settings.py  storage.py  symmetry.py
src/lacuna/extractors/: __init__.py  base.py  bash.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  kotlin.py  lua.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py  typescript.py
src/lacuna/tui/: __init__.py  app.py
tests/: test_calibration.py  test_cli_flags.py  test_closure.py  test_corpus_regression.py  test_enrichment.py  test_entities.py  test_estimator.py  test_export.py  test_extractor_fuzz.py  test_extractors_bash.py  test_extractors_c.py  test_extractors_cpp.py  test_extractors_csharp.py  test_extractors_go.py  test_extractors_java.py  test_extractors_javascript.py  test_extractors_kotlin.py  test_extractors_lua.py  test_extractors_php.py  test_extractors_ruby.py  test_extractors_rust.py  test_extractors_scala.py  test_extractors_swift.py  test_extractors_typescript.py  test_features.py  test_integration.py  test_mining.py  test_parallel.py  test_progress.py  test_purge.py  test_runs_log.py  test_selectors.py  test_series.py  test_settings.py  test_storage.py  test_symmetry.py  test_tui.py
tests/fixtures/: corpora.toml
