[project]
name = "lacuna"
version = "0.0.1"
description = "Find the holes your code already drew."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Shawn Bays", email = "shawnbays2003@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["code-quality", "static-analysis", "patterns", "tui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter >= 0.21",
    "tree-sitter-python >= 0.21",
    "tree-sitter-javascript >= 0.21",
    "tree-sitter-typescript >= 0.21",
    "tree-sitter-rust >= 0.21",
    "tree-sitter-go >= 0.21",
    "tree-sitter-java >= 0.21",
    "tree-sitter-ruby >= 0.21",
    "tree-sitter-c-sharp >= 0.21",
    "tree-sitter-c >= 0.21",
    "tree-sitter-cpp >= 0.21",
    "tree-sitter-php >= 0.21",
    "tree-sitter-kotlin >= 1.0",
    "tree-sitter-scala >= 0.21",
    "tree-sitter-lua >= 0.5",
    "tree-sitter-bash >= 0.21",
    "tree-sitter-swift >= 0.5",
    "textual >= 0.50",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    "pytest-cov >= 4.0",
    "ruff >= 0.1",
    "mypy >= 1.0",
]
docs = [
    "mkdocs-material >= 9.0",
    "mkdocstrings[python] >= 0.20",
]

[project.scripts]
lacuna = "lacuna.cli:main"

[project.entry-points."lacuna.extractors"]
python     = "lacuna.extractors.python:PythonExtractor"
javascript = "lacuna.extractors.javascript:JavaScriptExtractor"
typescript = "lacuna.extractors.typescript:TypeScriptExtractor"
tsx        = "lacuna.extractors.typescript:TSXExtractor"
rust       = "lacuna.extractors.rust:RustExtractor"
go         = "lacuna.extractors.go:GoExtractor"
java       = "lacuna.extractors.java:JavaExtractor"
ruby       = "lacuna.extractors.ruby:RubyExtractor"
csharp     = "lacuna.extractors.csharp:CSharpExtractor"
c          = "lacuna.extractors.c:CExtractor"
cpp        = "lacuna.extractors.cpp:CPlusPlusExtractor"
php        = "lacuna.extractors.php:PhpExtractor"
kotlin     = "lacuna.extractors.kotlin:KotlinExtractor"
scala      = "lacuna.extractors.scala:ScalaExtractor"
lua        = "lacuna.extractors.lua:LuaExtractor"
bash       = "lacuna.extractors.bash:BashExtractor"
swift      = "lacuna.extractors.swift:SwiftExtractor"

[project.urls]
# Homepage   = "https://lacuna.dev"      # Deferred — see DEFERRALS.md
# Repository = "https://github.com/..."  # Deferred — see DEFERRALS.md

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lacuna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
# Pragmatic settings: catch real bugs (None deref, return-type, etc.)
# without forcing exhaustive generic annotations everywhere. Tighten
# incrementally as the codebase stabilizes.
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
# Per-module overrides — extractors lean on tree-sitter's loosely-typed
# Node API; treating their child fields as bytes|None forces noisy guards.
[[tool.mypy.overrides]]
module = "lacuna.extractors.*"
disable_error_code = ["union-attr"]
