[project]
name = "absentia"
version = "1.0.1"
description = "Find the holes your code already drew."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Shawn Bays", email = "shawnbays2003@gmail.com" }]
# license uses the pre-PEP 639 table form because the SPDX-string
# form (`license = "Apache-2.0"`) requires Metadata 2.4 in the
# emitted wheel/sdist, and the hatchling that cibuildwheel v2.21
# resolves under its packaging==24.1 constraint emits Metadata 2.3.
# Twine + PyPI's metadata validator rejects the mismatch with
# "InvalidDistribution: license-expression introduced in metadata
# version 2.4, not 2.3". The table form below works on any hatchling
# version and is universally accepted.
license = { text = "Apache-2.0" }
# license-files is intentionally omitted: PEP 639 adoption is still
# in flux across packaging tools — hatchling versions in the
# cibuildwheel isolated build env reject the array form
# (`["LICENSE", "NOTICE"]`) with "Field `project.license-files` must
# be a table". Default discovery globs (LICENSE*, NOTICE*) pick both
# files up automatically, which is the same effective result without
# the version-skew failure mode.
keywords = ["code-quality", "static-analysis", "patterns", "tui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter >= 0.21",
    "tree-sitter-python >= 0.21",
    "tree-sitter-javascript >= 0.21",
    "tree-sitter-typescript >= 0.21",
    "tree-sitter-rust >= 0.21",
    "tree-sitter-go >= 0.21",
    "tree-sitter-java >= 0.21",
    "tree-sitter-ruby >= 0.21",
    "tree-sitter-c-sharp >= 0.21",
    "tree-sitter-c >= 0.21",
    "tree-sitter-cpp >= 0.21",
    "tree-sitter-php >= 0.21",
    "tree-sitter-kotlin >= 1.0",
    "tree-sitter-scala >= 0.21",
    "tree-sitter-lua >= 0.5",
    "tree-sitter-bash >= 0.21",
    "tree-sitter-swift >= 0.5",
    "textual >= 0.50",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    "pytest-cov >= 4.0",
    "hypothesis >= 6.0",
    "ruff >= 0.1",
    "mypy >= 1.0",
]
docs = [
    "mkdocs-material >= 9.0",
    "mkdocstrings[python] >= 0.20",
]

[project.scripts]
absentia = "absentia.cli:main"

[project.entry-points."absentia.extractors"]
python     = "absentia.extractors.python:PythonExtractor"
javascript = "absentia.extractors.javascript:JavaScriptExtractor"
typescript = "absentia.extractors.typescript:TypeScriptExtractor"
tsx        = "absentia.extractors.typescript:TSXExtractor"
rust       = "absentia.extractors.rust:RustExtractor"
go         = "absentia.extractors.go:GoExtractor"
java       = "absentia.extractors.java:JavaExtractor"
ruby       = "absentia.extractors.ruby:RubyExtractor"
csharp     = "absentia.extractors.csharp:CSharpExtractor"
c          = "absentia.extractors.c:CExtractor"
cpp        = "absentia.extractors.cpp:CPlusPlusExtractor"
php        = "absentia.extractors.php:PhpExtractor"
kotlin     = "absentia.extractors.kotlin:KotlinExtractor"
scala      = "absentia.extractors.scala:ScalaExtractor"
lua        = "absentia.extractors.lua:LuaExtractor"
bash       = "absentia.extractors.bash:BashExtractor"
swift      = "absentia.extractors.swift:SwiftExtractor"

[project.urls]
Homepage      = "https://github.com/skbays03/absentia"
Repository    = "https://github.com/skbays03/absentia"
Issues        = "https://github.com/skbays03/absentia/issues"
Changelog     = "https://github.com/skbays03/absentia/blob/main/CHANGELOG.md"
Documentation = "https://github.com/skbays03/absentia/tree/main/docs"
"Release Notes" = "https://github.com/skbays03/absentia/releases"

[build-system]
# Unpinned. cibuildwheel's bundled constraint files pin
# packaging==24.1, which conflicts with hatchling>=1.27 (which
# requires packaging>=24.2). The PEP 639 license-files schema fork
# that originally motivated a hatchling pin is sidestepped instead
# by omitting `license-files` from [project] above — default
# discovery globs cover LICENSE / NOTICE — so any hatchling
# cibuildwheel resolves works.
requires = ["hatchling", "hatch-mypyc"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/absentia"]

# mypyc compiles the two CPU-bound mining hot paths to native C
# extensions. On the Linux-kernel benchmark this trims another 2-5×
# off mining wall-clock without changing semantics. The compiled .so
# files are platform-specific, so wheels are published per OS × arch
# via cibuildwheel; users who install from sdist (or on platforms we
# don't build for) automatically get the pure-Python fallback.
[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc"]
include = [
    "src/absentia/mining.py",
    "src/absentia/symmetry.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
# Branch coverage is the discipline we hold ourselves to: every
# decision point must be exercised both ways. Line coverage alone
# misses entire categories of bugs (the "elif missed" classic).
branch = true
source = ["absentia"]
# mining.py and symmetry.py are mypyc-compiled to native .so files;
# coverage can't trace into compiled extensions. Tests against them
# still run (and assert correctness via test_corpus_regression +
# test_extractor_fuzz + the existing unit tests) — they're just not
# visible to coverage's instrumentation.
omit = [
    "*/absentia/mining.py",
    "*/absentia/symmetry.py",
]

[tool.coverage.report]
# Threshold pinned just below current measured coverage to protect
# against regressions without blocking on the TUI's many interactive
# paths (tui/app.py: 60%; difficult to unit-test the full keyboard
# binding surface). Tighten incrementally as TUI tests fill in.
fail_under = 73
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
# Pragmatic settings: catch real bugs (None deref, return-type, etc.)
# without forcing exhaustive generic annotations everywhere. Tighten
# incrementally as the codebase stabilizes.
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
# Per-module overrides — extractors lean on tree-sitter's loosely-typed
# Node API; treating their child fields as bytes|None forces noisy guards.
[[tool.mypy.overrides]]
module = "absentia.extractors.*"
disable_error_code = ["union-attr"]
